# src/main/kotlin/com/bookly/inventory/infrastructure/rest/InventoryControllerImpl.kt
@@ -3,6 +3,7 @@ package com.bookly.inventory.infrastructure.rest
 import com.bookly.book.application.BookService
 import com.bookly.book.domain.model.Book
 import com.bookly.bookstore.application.BookstoreService
+import com.bookly.bookstore.domain.model.BookstoreId
 import com.bookly.inventory.application.InventoryService
 import com.bookly.inventory.domain.model.InventoryItem
 import com.bookly.inventory.infrastructure.rest.InventoryItemDto.Companion.fromDomain
@@ -18,8 +19,8 @@ class InventoryControllerImpl(
     private val inventoryService: InventoryService
 ) : InventoryController {
 
-    @GetMapping("/{bookstoreId}/book/{isbn}/stock")
-    override fun getBookStock(
+    @GetMapping("/{bookstoreId}/book/{isbn}/inventory")
+    override fun getBookInventory(
         @PathVariable bookstoreId: UUID,
         @PathVariable isbn: String
     ): ResponseEntity<InventoryItemDto> {
@@ -30,7 +31,7 @@ class InventoryControllerImpl(
     }
 
     @PostMapping("/{bookstoreId}/book/{isbn}/stock")
-    override fun stockBook(
+    override fun updateInventory(
         @PathVariable bookstoreId: UUID,
         @PathVariable isbn: String,
         @RequestParam(required = false, defaultValue = "1") count: Int
@@ -39,5 +40,18 @@ class InventoryControllerImpl(
         val bookstore = bookstoreService.getBookstoreById(bookstoreId)
         val inventoryItem = inventoryService.addInventoryItem(bookstore.id, Book.BookId(isbn), count)
         return ResponseEntity.ok(fromDomain(inventoryItem, book, bookstore))
+    }
+
+    @GetMapping("/{bookstoreId}/inventory")
+    override fun getBookstoreInventory(
+        @PathVariable bookstoreId: UUID
+    ): ResponseEntity<List<InventoryItemDto>> {
+        val bookStore = bookstoreService.getBookstoreById(bookstoreId)
+        return ResponseEntity.ok(
+            inventoryService.getInventoriesForBookstore(BookstoreId(bookstoreId)).map { item ->
+                val book = bookService.getBookById(item.bookId)
+                InventoryItemDto.fromDomain(item, book, bookStore)
+            }
+        )
     }
 }
